# AppliedRoboticsStudentInterface

./: CMakeLists.txt  defaultArenaConfig.json  defaultConfig.json  defaultSimulatorConfig.json
cameraCalibration/: calibrationConfig.xml  calibrationImages.xml
cameraCalibration/camera_image000/: list.xml
maps/: README.md  my-map-1.broken.sdf  my-map-1.sdf  my-map-2.sdf  my-map-3.sdf
src/: camera_calibration.cpp  match_template.cpp  opencv-utils.cpp  opencv-utils.h  student_interface.cpp  utils.cpp  utils.h
src/demo_shape_detection/: demo_filters.cpp  demo_full_example.cpp  demo_rgb_filter.cpp  demo_simple_shape_detection.cpp
src/demos/: best_theta.cpp  collision_detector.cpp  debins.cpp  find_robot.cpp  find_victims.cpp  match_template.cpp  planning.cpp  tesseract_ocr.cpp
src/demos/demo_shape_detection/: demo_dilatation_erosion.cpp  demo_full_example.cpp  demo_hsv_filter.cpp  demo_smoothing.cpp
src/dubins/: curve.cpp  curve.h  main.cpp  primitives.cpp  primitives.h  scale.h  temp.cpp  utils.h
src/pipeline/: Config.cpp  Config.h  DebugImage.cpp  DebugImage.h  extrinsic_calibration.cpp  image_undistort.cpp  unwrap.cpp  utils.cpp  utils.h
src/pipeline/detection/: ShapeDetector.cpp  ShapeDetector.h  find_gate.cpp  find_gate.hpp  find_obstacles.cpp  find_obstacles.hpp  find_robot.cpp  find_robot.hpp  find_victims.cpp  find_victims.hpp  process_map.cpp  utils.cpp  utils.h
src/pipeline/detection/digit_classification/: DigitClassifier.cpp  DigitClassifier.h
src/pipeline/planning/: Graph.cpp  Graph.h  Mission1.cpp  Mission1.h  Mission1RTT.cpp  Mission1RTT.h  Mission2.cpp  Mission2.h  MissionSolver.cpp  MissionSolver.h  Scaler.cpp  Scaler.h  best_theta.h  inflate.cpp  inflate.h  planning.cpp  planning.h  rrt.cpp  voronoi_cleanest_path.cpp  voronoi_cleanest_path.h  voronoi_helper.cpp  voronoi_helper.h
src/pipeline/planning/best_theta/: BestThetaFinder.cpp  BestThetaFinder.h  best_theta.cpp  best_theta.h
src/pipeline/planning/collision_detection/: CollisionDetector.cpp  CollisionDetector.h  ShadowCollisionDetector.cpp  ShadowCollisionDetector.h
src/pipeline/planning/dubins/: Dubins.m  curve.cpp  dubins.cpp  dubins.h  main.cpp  models.cpp  models.h  primitives.cpp  primitives.h  scale.cpp  temp.h  utils.cpp
src/pipeline/planning/voronoi/: voronoi_cleanest_path.cpp  voronoi_cleanest_path.h
